CHANGES: 21-11-25/...-10/.../2021
- Updated help section

CHANGES: 21-04-03-03-2021
- Added function that edit the 'project.json' by using CLI tools
- Models package refactored - created files:
    1. command.go
    2. error.go
    3. file.go
    4. project.go
    5. var.go
- Added changelogs directory

CHANGES: 21-04-05-03-2021
- Created new help section

CHANGES: 21-04-10-03-2021
- README.md updated
- Added CLI editing of project.json
- Bugs fixed
- Created release

CHANGES: 21-06-11-03-2021
- Updated version,
- Added possibility of updating Variables in project.json by using CLI
- Added possibility of updating project info
- Code refactored, added file:
    - update.go
- Readme.md updated
- Error handling and added log about that work is done

CHANGES: 21-06-19-03-2021
- Deleted unnecessary messages
- Added changelogs passing to CLI

CHANGES: 21-06-23-03-2021
- Added -version flag
- Code cleaned up

CHANGES: 21-06-24-03-2021
- Added version.txt to godemon path
- code cleaned up

CHANGES: 21-06-01-04-2021
- Added flags in commands support